--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@react-hookz/web": "^23.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-use-precision-timer": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
